# time-lord-tim

./: .gitignore  LICENSE  main.py  pyproject.toml
src/: best_distinct_spans.py
tests/: test_best_distinct_spans.py
